--- a/src/app/auth/sign-in/sign-in.component.sass
+++ b/src/app/auth/sign-in/sign-in.component.sass
@@ -2,7 +2,7 @@ form
   border: 3px solid #f1f1f1
   font-family: Arial, Helvetica, sans-serif
 
-input[type=email], input[type=password] 
+input[type=email], input[type=password], input[type=text]
   width: 100%
   padding: 12px 20px
   margin: 8px 0
